Changed js file from main.js to app.js

--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
          </section>
      </main>
 
-     <script src="main.js"></script>
+     <script src="app.js"></script>
 </body>
 </html>
